# QxRibbon

./: .clang-format  .gitignore  CHANGELOG  CMakeLists.txt  QxRibbon.pro  README.md  common.pri  release.sh
demo/: CMakeLists.txt  aboutdialog.cpp  demo.pro  demo.qrc  main.cpp  mainwindow.cpp  mainwindow.h
demo/res/: office2016blue.css
projects/: README.md
projects/template/: config.pri
projects/template/src/app/: app.pro  app.qrc  mainwindow.cpp  mainwindow.h
projects/template/src/libs/: libs.pro
projects/template/src/libs/qxribbon/: qxribbon.pro  qxribbon_dependencies.pri
pyqt/: .gitignore  LICENSE
pyqt/PyRibbon/: FramelessHelper.py  QxRibbon.py  QxRibbonApplicationButton.py  QxRibbonBar.py  QxRibbonButton.py  QxRibbonButtonGroup.py  QxRibbonContainers.py  QxRibbonControls.py  QxRibbonDrawHelper.py  QxRibbonGallery.py  QxRibbonGroup.py  QxRibbonPage.py  QxRibbonQuickAccessBar.py  QxRibbonRes.qrc  QxRibbonRes_rc.py  QxRibbonTabBar.py  QxRibbonWindow.py  QxWindowButtonGroup.py  __init__.py
pyqt/demo/: RibbonDemo.py
pyqt/test/: test_RibbonBar.py  test_RibbonGallery.py
src/: CMakeLists.txt  FramelessHelper.cpp  FramelessHelper.h  QxGlobal.h  QxRibbon.cpp  QxRibbon.h  QxRibbon.pri  QxRibbonActionsManager.cpp  QxRibbonActionsManager.h  QxRibbonApplicationButton.cpp  QxRibbonApplicationButton.h  QxRibbonBar.cpp  QxRibbonBar.h  QxRibbonBarPrivate.h  QxRibbonButton.cpp  QxRibbonButton.h  QxRibbonButtonGroup.cpp  QxRibbonButtonGroup.h  QxRibbonButtonPrivate.h  QxRibbonColorButton.cpp  QxRibbonColorButton.h  QxRibbonColorButtonPrivate.h  QxRibbonContainers.cpp  QxRibbonContainers.h  QxRibbonControls.cpp  QxRibbonControls.h  QxRibbonCustomizeData.cpp  QxRibbonCustomizeData.h  QxRibbonCustomizeDialog.cpp  QxRibbonCustomizeDialog.h  QxRibbonCustomizeWidget.cpp  QxRibbonCustomizeWidget.h  QxRibbonDrawHelper.cpp  QxRibbonDrawHelper.h  QxRibbonFactory.cpp  QxRibbonFactory.h  QxRibbonGallery.cpp  QxRibbonGallery.h  QxRibbonGalleryGroup.cpp  QxRibbonGalleryGroup.h  (+35 more)
src/res/: default.css  default.qss  office2013.css  office2013.qss  wpsdark.css
