cmake_minimum_required(VERSION 3.5)

set(QX_RIBBON_VERSION_MAJOR 0)
set(QX_RIBBON_VERSION_MINOR 5)
set(QX_RIBBON_VERSION_PATCH 6)
set(QX_RIBBON_VERSION "${QX_RIBBON_VERSION_MAJOR}.${QX_RIBBON_VERSION_MINOR}.${QX_RIBBON_VERSION_PATCH}")

project(QtRibbon LANGUAGES CXX)

option(BUILD_EXAMPLES "build the examples" ON)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)


if("${CMAKE_SIZEOF_VOID_P}" STREQUAL "4")
    set(QX_RIBBON_PLATFORM "x86")
else()
    set(QX_RIBBON_PLATFORM "x64")
endif()

set(QX_RIBBON_BIN_DIR "${CMAKE_BINARY_DIR}/${QX_RIBBON_PLATFORM}")

add_subdirectory(src)

if(BUILD_EXAMPLES)
    add_subdirectory(demo)
endif()
